--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
               "moment",
               "dropzone"
             ],
-            "outputPath": "dist/Matdash",
+            "outputPath": "dist/intercoLendys",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
